kubernetes/manifest/wordpress/ingress/wordpress.app.yaml
---
# webapp deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gwdc-web
  namespace: gwdc
  labels:
    name: gwdc-web
spec:
  replicas: 1
  selector:
    matchLabels:
       name: gwdc-web
  template:
    metadata:
      labels:
        name: gwdc-web
    spec:
      containers:
      - name: gwdc-web
        image: wordpress:latest
        ports:
        - name: webui
          containerPort: 80
        resources: {}
        tty: true
        volumeMounts:
          - name: nfs-wordpress-html
            mountPath: "/var/www/html/wp-content"
      volumes:
      - name: nfs-wordpress-html
        persistentVolumeClaim:
          claimName: nfs-pvc-app
      restartPolicy: Always
...
