kubernetes/manifest/wordpress/ingress/wordpress.db.yaml
---
# db
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gwdc-db
  namespace: gwdc
  labels:
    name: gwdc-db
spec:
  replicas: 1
  selector:
    matchLabels:
      name: gwdc-db
  template:
    metadata:
      labels:
        name: gwdc-db
    spec:
      containers:
      - name: mysql
        image: mysql:5.7
        ports:
        - name: port-mysql
          containerPort: 3306
        volumeMounts:
          - name: nfs-mysql-data
            mountPath: "/var/lib/mysql"
      volumes:
      - name: nfs-mysql-data
        persistentVolumeClaim:
          claimName: nfs-pvc-db
---
# mysql service
apiVersion: v1
kind: Service
metadata:
  name: gwdc-db
  namespace: gwdc
  labels:
    name: gwdc-db
spec:
  ports:
  - name: gwdc-db
    port: 3306
    targetPort: 3306
  selector:
    name: gwdc-db
...
