kubernetes/manifest/wordpress/ingress/wordpress.service.app.yaml
---
# wordpress
apiVersion: v1
kind: Service
metadata:
  namespace: gwdc
  name: gwdc-web
  labels:
    name: gwdc-web
spec:
  type: ClusterIP
  ports:
  - name: webui
    port: 80
    targetPort: 80
  selector:
    name: gwdc-web
