kubernetes/manifest/wordpress/ingress/wordpress.ingress.yaml
---
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gwdc-ing
  namespace: gwdc
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: gwdc.org.au
    http:
      paths:
      - path: /
        backend:
          service:
            name: gwdc-web
            port: 80
  - rules:
    - host: vault.gwdc.org.au
      http:
        paths:
          - backend:
              service:
                name: vault
                port:
                  number: 8200
            path: /
            pathType: Prefix
...
